--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ html {
 
 body {
   font-family: "Spartan", sans-serif;
+  overflow-x: hidden;
 }
 
 .max-width {
@@ -141,6 +142,10 @@ h3 {
   background: white;
   color: black;
   border: 1px black solid;
+}
+
+picture img {
+  box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.5);
 }
 
 .btn-black {
@@ -223,6 +228,7 @@ h3 {
   position: relative;
 }
 .twobox__container-most__picture::before {
+  content: url("../img/main-page/barre.png");
   position: absolute;
   top: 28.2rem;
   right: -10rem;
@@ -270,6 +276,7 @@ h3 {
   position: relative;
 }
 .family__container picture::before {
+  content: url("../img/main-page/barre.png");
   position: absolute;
   top: -3.8rem;
   left: -3rem;
@@ -361,14 +368,19 @@ h3 {
     padding-bottom: 12rem;
   }
   .twobox__container-enjoy {
+    flex-direction: column;
     justify-content: center;
   }
   .twobox__container-most {
     flex-direction: column-reverse;
   }
+  .twobox__container-most__picture::before {
+    top: 22.2rem;
+    right: -7rem;
+  }
 
   .highlights {
-    margin-top: 0rem;
+    margin-top: 0;
     padding-top: 4rem;
   }
   .highlights__container {
@@ -379,6 +391,9 @@ h3 {
     padding-top: 2.6rem;
   }
 
+  .family {
+    background-position: -41rem top;
+  }
   .family__container {
     justify-content: center;
     padding-top: 9.6rem;
@@ -409,15 +424,18 @@ h3 {
     background-color: var(--color-codGray);
   }
   .reservation__container {
-    justify-content: center;
-    padding: 6.5rem 0rem;
+    flex-direction: column;
+    padding: 6.5rem 0;
   }
   .reservation__container .btn {
     margin-top: 2.3rem;
   }
 
   .footer__container {
-    align-items: flex-end;
+    align-items: end;
+  }
+  .footer__container__picture {
+    margin-bottom: 4rem;
   }
   .footer__address {
     display: block;
@@ -426,6 +444,111 @@ h3 {
   }
   .footer__address__container {
     margin-bottom: 3.2rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .background__container, .container-article {
+    max-width: 315px;
+  }
+
+  .container-article {
+    margin-top: 8.7rem;
+  }
+  .container-article::before {
+    left: 12rem;
+  }
+
+  .background__heading-1 {
+    font-size: 3.2rem;
+    font-weight: 300;
+    line-height: 4rem;
+    text-align: center;
+    letter-spacing: -0.4px;
+  }
+
+  p, .background__para {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 2.5rem;
+    text-align: center;
+    letter-spacing: -0.1875px;
+  }
+
+  .heading-2 {
+    font-size: 3.2rem;
+    font-weight: 700;
+    line-height: 4rem;
+    text-align: center;
+    letter-spacing: -0.4px;
+  }
+
+  .twobox {
+    background: none;
+    padding-bottom: 8rem;
+  }
+  .twobox__container-enjoy {
+    margin-top: 7.9rem;
+  }
+  .twobox__container-enjoy__picture img {
+    margin-top: -16rem;
+  }
+  .twobox__container-most__picture::before {
+    content: none;
+  }
+
+  .highlights {
+    padding-top: 7.2rem;
+  }
+  .highlights .container-article {
+    max-width: 35rem;
+    margin-bottom: 6.4rem;
+  }
+  .highlights__seared__items {
+    justify-content: center;
+  }
+  .highlights__seared__items__picture {
+    background: none;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+  }
+  .highlights__seared__items__description {
+    text-align: center;
+    margin-top: 3.2rem;
+  }
+
+  .family__container {
+    padding-top: 8rem;
+  }
+  .family__container picture::before {
+    content: none;
+  }
+
+  .family .buttons a {
+    display: block;
+    margin-bottom: 1.6rem;
+  }
+
+  .family .buttons .active::before {
+    left: 33%;
+  }
+
+  .family .container-article {
+    margin-top: 2.4rem;
+  }
+
+  .reservation {
+    background: url("../img/mobile/reservation.png") no-repeat;
+    background-size: cover;
+    background-color: var(--color-codGray);
+  }
+  .reservation__container {
+    padding: 8rem 0;
+  }
+
+  .footer__address {
+    margin: 4rem 0 0 0;
+    text-align: center;
   }
 }
 
