--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,9 +69,8 @@ html {
     letter-spacing: -0.5px;
   }
 
-  .h2-color {
-    color: var(--color-codGray);
-  }
+  .h2-black {
+    color: var(--ebonyCLay) }
 
   h3 {
     font-size: 1.8rem;
