no-repeat reservation

--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ picture img {
   }
 
   .reservation {
-    background: url("../img/tablet/reservation.png");
+    background: url("../img/tablet/reservation.png") no-repeat;
     background-color: var(--color-codGray);
   }
   .reservation__container {
